# wechat-ilink-bot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: examples.md  faq.md  getting-started.md  index.md  installation.md  media.md  message-delivery.md  webhook.md
docs/api/: bot.md  context.md  webhook.md
examples/: account_switch.py  command_bot.py  echo_bot.py  login_bot.py  media_bot.py  proactive_send.py  webhook_server.py
plans/: 2026-03-28-documentation_authoring_plan-v1.md  2026-03-28-wechat_bot_codex_review_stability_usability_maintainability-v1.md  2026-03-28-wechat_bot_review_open_source_readiness-v1.md  2026-03-28-wechat_bot_target_user_owner_binding_strategy-v1.md
scripts/: clear_build.sh
src/wechat_bot/: __init__.py  _logging.py  _version.py  auth.py  bot.py  cli.py  client.py  context.py  errors.py  handlers.py  models.py  polling.py  storage.py  types.py  webhook.py
src/wechat_bot/media/: __init__.py  crypto.py  download.py  upload.py
tests/: test_auth.py  test_bot.py  test_cli.py  test_client.py  test_context.py  test_crypto.py  test_examples_smoke.py  test_handlers.py  test_media_download.py  test_media_upload.py  test_models.py  test_polling.py  test_storage.py  test_webhook.py
